[Visualizations] Fix chart visibility on Safari small screens

--- a/src/plugins/vis_default_editor/public/_default.scss
+++ b/src/plugins/vis_default_editor/public/_default.scss
@@ -91,8 +91,7 @@
   }
 
   .visEditor__visualization__wrapper {
-    // force the visualization to take 100% width and height.
+    // force the visualization to take 100% width.
     width: 100% !important;
-    height: 100% !important;
   }
 }
